Update script and style links to relative paths

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>Maze Algorithm Visualizer</title>
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet" />
-<style src="style.css"></style>
-<script src="script.js" defer ></script>
+<style src="./style.css"></style>
+<script src="./script.js" defer ></script>
 </head>
 <body>
 
