--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Maze Algorithm Visualizer</title>
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet" />
-<style src="./style.css"></style>
+<link href="./style.css" rel="stylesheet">
 <script src="./script.js" defer ></script>
 </head>
 <body>
